---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    - 
  Changes:
    - 
  Bugfixes:
    - Fixed that adding recipes which used hidden items would crash

---------------------------------------------------------------------------------------------------
Version: 0.18.14
Date: 16. 05. 2020
  Bugfixes:
    - Fixed that the game could be paused unexpectedly
    - Fixed a crash when selecting a product from the item picker
    - Fixed a crash when opening certain dialogs

---------------------------------------------------------------------------------------------------
Version: 0.18.13
Date: 16. 05. 2020
  Features:
    - You can now alt-click the machine of any recipe to reset it to default, removing any configured limits
  Changes:
    - Removed the functionality to shift-click a machine choice to set it as the default
    - Added an exception so that Klonan's Transport/Mining Drone pseudo-recipes won't show up in the recipe picker
    - Reworded the tooltip for the production percentage-column to be more correct
    - Added the mod name and description to the locale file, so it can be localised to other languages
  Bugfixes:
    - Added a temporary fix for some dialogs showing up behind the main interface. I'll have to wait on the reaction of the devs for a proper fix. For now, opening the product picker dialog will be slower. Sorry about that.
    - Fixed that rocket silo recipes would be calculated incorrectly, which had lead to inaccurate machine counts and wacky numbers when using the items/s/machine view
    - Fixed that machines with negative pollution values would display as having 0 pollution
    - Fixed that you could be stranded on a non-existant subfloor after deleting its main recipe
    - Fixed that alt-tabbing or changing resolution while FP is pausing the game could cause it to be stuck in the paused state